--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Finnish drama -- 19th century'
 - !lcsh 'Finnish fiction -- 19th century'
 - !lcc 'PH'
+- GITenberg
 tableOfContents: Hän sai helposti rikkaan aviopuolison -- Täytyy naida -- Maisteri
   kesävieraana.
 title: Sinivuokkoja Suomen salomailta
